--- a/example/base_signup.html
+++ b/example/base_signup.html
@@ -16,7 +16,7 @@
         비밀번호 : <input type="password" name="password" placeholder="password">
     </div>
     <div>
-        비밀번호 확인 : <input type="password" name="pwConfrim" placeholder="password check">
+        비밀번호 확인 : <input type="password" name="pwConfirm" placeholder="password check">
     </div>
     <div>
         이메일 : <input type="email" name="email" id="" placeholder="email">
