--- a/example/base.html
+++ b/example/base.html
@@ -48,7 +48,8 @@
         <input type="reset" value="reset"><br>
         input tag 는 보통 폼 태그(서버에 데이터를 전송하기 위한 태그)와 많이 사용한다.
         <br><br>
-        보통 설문 조사에 많이 사용한다.
+        보통 설문 조사에 많이 사용한다. <br>
+        name은 중복되어도 되지만, id는 중복되면 안된다. <br>
         <input type="checkbox" name="" id=""><br>
         radiobax는 name이 동일하면 그 중에 하나만 선택 할 수 있다.
         <input type="radio" name="gender"" value="남성" checked>
