--- a/example/table_ex.html
+++ b/example/table_ex.html
@@ -20,6 +20,9 @@
 		tbody>tr:nth-child(odd){
 			background-color: aliceblue;
 		}
+		tbody>tr:hover{ /* 이게 위로 올라가면 이거 위로 색이 적용이 되서, hover가 적용 안 된다. */
+			background-color: gray;
+		}
 	</style>
 </head>
 <body>
